[gd_scene load_steps=6 format=3 uid="uid://ccnfhy1pju2vo"]

[ext_resource type="Script" path="res://units/player/player.gd" id="1_6ih47"]
[ext_resource type="Texture2D" uid="uid://g282e7fxs8ki" path="res://assets/Player.png" id="2_wb62c"]
[ext_resource type="Texture2D" uid="uid://dpgsxidbrwkel" path="res://assets/Player-Bullet.png" id="3_qu7mo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsxaj"]
size = Vector2(6, 6)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_taawa"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
angle_max = 180.0
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 25
motion_mode = 1
script = ExtResource("1_6ih47")
max_health = 100.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wb62c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gsxaj")

[node name="DamagedParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_taawa")
texture = ExtResource("3_qu7mo")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="AttackCooldown" type="Timer" parent="."]

[node name="InvincibleTimer" type="Timer" parent="."]

[node name="RegenerationTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="RegenerationTimer" to="." method="_on_regeneration_timer_timeout"]
